# parallax

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agentfailbench/: __init__.py  models.py  registry.py
agentfailbench/agents/: __init__.py  scripted.py
agentfailbench/environments/customer_api/: __init__.py  env.py
agentfailbench/failures/: __init__.py  base.py
agentfailbench/failures/tool_drift/: __init__.py  injector.py  tool-semantic-drift-001.yaml
agentfailbench/runners/: __init__.py  episode.py
baselines/: __init__.py
baselines/rules/: __init__.py  detectors.py
docs/: benchmark-specification.md  experimental-protocol.md  failure-taxonomy.md  recovery-policy.md  research-proposal.md  roadmap.md  semantic-trace-schema.md
docs/architecture-decisions/: 0001-repository-layout.md  README.md
docs/assets/: README.md
examples/: README.md
examples/api_agent/: __init__.py  agent.py
experiments/results/: tool-semantic-drift-001-report.json  tool-semantic-drift-001.md
experiments/scripts/: run_vertical_slice.sh
paper/: main.tex  references.bib
recovery/: __init__.py
recovery/actions/: __init__.py  tool_contract.py
recovery/policies/: __init__.py  suggest.py
runtime/: __init__.py  cli.py
runtime/diagnosis/: __init__.py  rules.py
runtime/features/: __init__.py  mismatch.py  progress.py
runtime/schemas/: __init__.py  episode.py  root_cause.py  taxonomy.py  trace.py
runtime/tracing/: __init__.py  collector.py
scripts/: create_github_issues.py  generate_readme_assets.py
tests/integration/: test_vertical_slice.py
tests/unit/: test_customer_api.py  test_detectors.py  test_failure_injector.py  test_foundation.py  test_no_progress_detector.py  test_recovery_policy.py  test_root_cause.py
website/: README.md
