[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "reliable-agent-systems"
version = "0.1.0"
description = "Runtime reliability, diagnosis, and recovery for autonomous AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Abhinaysai Kamineni" },
]
keywords = [
  "ai-agents",
  "reliability",
  "agent-evaluation",
  "observability",
  "recovery",
  "benchmark",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.7,<3",
  "pyyaml>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/askmy-stack/parallax"
Repository = "https://github.com/askmy-stack/parallax"
Issues = "https://github.com/askmy-stack/parallax/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "hypothesis>=6.100,<7",
  "types-PyYAML>=6.0,<7",
]
analysis = [
  "pandas>=2.2,<3",
  "numpy>=2.0,<3",
  "scikit-learn>=1.5,<2",
  "scipy>=1.13,<2",
]

[project.scripts]
ras = "runtime.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentfailbench", "runtime", "recovery", "baselines"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["agentfailbench", "runtime", "recovery", "baselines"]
